Developed code on verification with assertion

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-932100889\testng-customsuite.xml</span>
+                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-549731572\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,6 +101,11 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyROffersAndDealsPageTest" class="method navigator-link" hash-for-method="verifyDataAfterOfferCreation">verifyDataAfterOfferCreation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyROffersAndDealsPageTest" class="method navigator-link" hash-for-method="verifyOffersAndDealsFlow">verifyOffersAndDealsFlow</a> <!-- method navigator-link -->
@@ -126,6 +131,13 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="verifyDataAfterOfferCreation">
+                  </a> <!-- verifyDataAfterOfferCreation -->
+                  <span class="method-name">verifyDataAfterOfferCreation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="verifyOffersAndDealsFlow">
                   </a> <!-- verifyOffersAndDealsFlow -->
                   <span class="method-name">verifyOffersAndDealsFlow</span>
@@ -136,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-932100889\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-549731572\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -185,16 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyOffersAndDealsFlow')
 data.setCell(0, 2, 'easyr.qa.testCases.EasyROffersAndDealsPageTest')
-data.setCell(0, 3, 26132);
+data.setCell(0, 3, 33845);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifyDataAfterOfferCreation')
+data.setCell(1, 2, 'easyr.qa.testCases.EasyROffersAndDealsPageTest')
+data.setCell(1, 3, 18140);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 26 seconds</span>
+              <span class="suite-total-time">Total running time: 51 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -227,11 +243,23 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyOffersAndDealsFlow</span>
-                <span class="method-start">2699 ms</span>
+                <span class="method-start">2651 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">28833 ms</span>
+                <span class="method-start">36498 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">36640 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyDataAfterOfferCreation</span>
+                <span class="method-start">38543 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">56684 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
