--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-549731572\testng-customsuite.xml</span>
+                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--1291943073\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,12 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyROffersAndDealsPageTest" class="method navigator-link" hash-for-method="verifyDataAfterOfferCreation">verifyDataAfterOfferCreation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyROrganizationPageTest" class="method navigator-link" hash-for-method="createOrganization">createOrganization</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyROffersAndDealsPageTest" class="method navigator-link" hash-for-method="verifyOffersAndDealsFlow">verifyOffersAndDealsFlow</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyROrganizationPageTest" class="method navigator-link" hash-for-method="verifyCreatedOrganization">verifyCreatedOrganization</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,21 +126,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">easyr.qa.testCases.EasyROffersAndDealsPageTest</span>
+              <span class="class-name">easyr.qa.testCases.EasyROrganizationPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyDataAfterOfferCreation">
-                  </a> <!-- verifyDataAfterOfferCreation -->
-                  <span class="method-name">verifyDataAfterOfferCreation</span>
+                  <a name="createOrganization">
+                  </a> <!-- createOrganization -->
+                  <span class="method-name">createOrganization</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyOffersAndDealsFlow">
-                  </a> <!-- verifyOffersAndDealsFlow -->
-                  <span class="method-name">verifyOffersAndDealsFlow</span>
+                  <a name="verifyCreatedOrganization">
+                  </a> <!-- verifyCreatedOrganization -->
+                  <span class="method-name">verifyCreatedOrganization</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -148,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-549731572\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--1291943073\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -157,7 +157,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;easyr.qa.testCases.EasyROffersAndDealsPageTest&quot;/&gt;
+      &lt;class name=&quot;easyr.qa.testCases.EasyROrganizationPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -199,18 +199,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyOffersAndDealsFlow')
-data.setCell(0, 2, 'easyr.qa.testCases.EasyROffersAndDealsPageTest')
-data.setCell(0, 3, 33845);
+data.setCell(0, 1, 'createOrganization')
+data.setCell(0, 2, 'easyr.qa.testCases.EasyROrganizationPageTest')
+data.setCell(0, 3, 7101);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyDataAfterOfferCreation')
-data.setCell(1, 2, 'easyr.qa.testCases.EasyROffersAndDealsPageTest')
-data.setCell(1, 3, 18140);
+data.setCell(1, 1, 'verifyCreatedOrganization')
+data.setCell(1, 2, 'easyr.qa.testCases.EasyROrganizationPageTest')
+data.setCell(1, 3, 156);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 51 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -236,30 +236,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">easyr.qa.testCases.EasyROffersAndDealsPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">easyr.qa.testCases.EasyROrganizationPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setUp</span>
+                <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyOffersAndDealsFlow</span>
-                <span class="method-start">2651 ms</span>
+                <span class="method-name">createOrganization</span>
+                <span class="method-start">2314 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">36498 ms</span>
+                <span class="method-start">9418 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">36640 ms</span>
+                <span class="method-name">setup</span>
+                <span class="method-start">9524 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyDataAfterOfferCreation</span>
-                <span class="method-start">38543 ms</span>
+                <span class="method-name">verifyCreatedOrganization</span>
+                <span class="method-start">11325 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">56684 ms</span>
+                <span class="method-start">11482 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
