verify survey sended to user'

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">25,249</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">35,525</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">easyr.qa.testCases.EasyRSurveyPageTest</td><td><a href="#m0">verifyCreatedSurveyOnListingPage</a></td><td rowspan="1">1758187166146</td><td rowspan="1">297</td></tr><tr class="passedeven"><td><a href="#m1">verifySurvey</a></td><td rowspan="1">1758187143711</td><td rowspan="1">20428</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">easyr.qa.testCases.EasyRSurveyPageTest</td><td><a href="#m0">verifyCreatedSurveyOnListingPage</a></td><td rowspan="1">1758189614135</td><td rowspan="1">240</td></tr><tr class="passedeven"><td><a href="#m1">verifySurvey</a></td><td rowspan="1">1758189592051</td><td rowspan="1">20088</td></tr><tr class="passedeven"><td><a href="#m2">verifyUserOfSendSurvey</a></td><td rowspan="1">1758189616338</td><td rowspan="1">8706</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">easyr.qa.testCases.EasyRSurveyPageTest#verifyCreatedSurveyOnListingPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">easyr.qa.testCases.EasyRSurveyPageTest#verifySurvey</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">easyr.qa.testCases.EasyRSurveyPageTest#verifyUserOfSendSurvey</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
