--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--874113807\testng-customsuite.xml</span>
+                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-492193526\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -109,6 +109,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRSurveyPageTest" class="method navigator-link" hash-for-method="verifySurvey">verifySurvey</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRSurveyPageTest" class="method navigator-link" hash-for-method="verifyUserOfSendSurvey">verifyUserOfSendSurvey</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -143,12 +148,19 @@
                   <span class="method-name">verifySurvey</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyUserOfSendSurvey">
+                  </a> <!-- verifyUserOfSendSurvey -->
+                  <span class="method-name">verifyUserOfSendSurvey</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--874113807\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-492193526\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -197,20 +209,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifySurvey')
 data.setCell(0, 2, 'easyr.qa.testCases.EasyRSurveyPageTest')
-data.setCell(0, 3, 20428);
+data.setCell(0, 3, 20088);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyCreatedSurveyOnListingPage')
+data.setCell(1, 1, 'verifyUserOfSendSurvey')
 data.setCell(1, 2, 'easyr.qa.testCases.EasyRSurveyPageTest')
-data.setCell(1, 3, 297);
+data.setCell(1, 3, 8706);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verifyCreatedSurveyOnListingPage')
+data.setCell(2, 2, 'easyr.qa.testCases.EasyRSurveyPageTest')
+data.setCell(2, 3, 240);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 29 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -243,23 +259,35 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifySurvey</span>
-                <span class="method-start">2495 ms</span>
+                <span class="method-start">2415 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22926 ms</span>
+                <span class="method-start">22505 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">22928 ms</span>
+                <span class="method-start">22628 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyCreatedSurveyOnListingPage</span>
-                <span class="method-start">24930 ms</span>
+                <span class="method-start">24499 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">25228 ms</span>
+                <span class="method-start">24740 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">24844 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyUserOfSendSurvey</span>
+                <span class="method-start">26702 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">35409 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
