Add wait on vendor edit click

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--1502892403\testng-customsuite.xml</span>
+                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--240720085\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRVendorPageTest" class="method navigator-link" hash-for-method="verifyDisplayedVendorActiveStatusToggle">verifyDisplayedVendorActiveStatusToggle</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRVendorPageTest" class="method navigator-link" hash-for-method="clickOnViewVendorIcon">clickOnViewVendorIcon</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyDisplayedVendorActiveStatusToggle">
-                  </a> <!-- verifyDisplayedVendorActiveStatusToggle -->
-                  <span class="method-name">verifyDisplayedVendorActiveStatusToggle</span>
+                  <a name="clickOnViewVendorIcon">
+                  </a> <!-- clickOnViewVendorIcon -->
+                  <span class="method-name">clickOnViewVendorIcon</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--1502892403\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--240720085\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;easyr.qa.testCases.EasyRVendorPageTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyDisplayedVendorActiveStatusToggle&quot;/&gt;
+          &lt;include name=&quot;clickOnViewVendorIcon&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- easyr.qa.testCases.EasyRVendorPageTest --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyDisplayedVendorActiveStatusToggle')
+data.setCell(0, 1, 'clickOnViewVendorIcon')
 data.setCell(0, 2, 'easyr.qa.testCases.EasyRVendorPageTest')
-data.setCell(0, 3, 10288);
+data.setCell(0, 3, 7304);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,9 +219,9 @@ return data;
             <div class="ignored-class-div">
               <span class="ignored-class-name">easyr.qa.testCases.EasyRVendorPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifySelectAddressFieldValidation</span>
-                <br/>
                 <span class="ignored-method-name">verifyDisplayedVendorAnalystIcon</span>
+                <br/>
+                <span class="ignored-method-name">verifySelectAddressFieldValidation</span>
                 <br/>
                 <span class="ignored-method-name">verifyDisplayedVendorQRCodeIcon</span>
                 <br/>
@@ -257,11 +257,11 @@ return data;
                 <br/>
                 <span class="ignored-method-name">verifyInvalidMobileNoFieldValidation</span>
                 <br/>
-                <span class="ignored-method-name">clickOnViewVendorIcon</span>
-                <br/>
                 <span class="ignored-method-name">verifyCompanyNameFieldValidation</span>
                 <br/>
                 <span class="ignored-method-name">verifyInvalidEmailFieldValidation</span>
+                <br/>
+                <span class="ignored-method-name">verifyDisplayedVendorActiveStatusToggle</span>
                 <br/>
                 <span class="ignored-method-name">verifyMobileFieldValidation</span>
                 <br/>
@@ -287,12 +287,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyDisplayedVendorActiveStatusToggle</span>
-                <span class="method-start">2138 ms</span>
+                <span class="method-name">clickOnViewVendorIcon</span>
+                <span class="method-start">2416 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">12428 ms</span>
+                <span class="method-start">9722 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
